<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="web_client_id" translatable="false">822973545769-5i2qglaribp8b3uubescoqnnl1ctmmr7.apps.googleusercontent.com</string>
    <string name="app_name" translatable="false">PlannerApp</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="app_ad_unit_id" translatable="false">ca-app-pub-4559958901091262~8305721699</string>
    <string name="main_ad_unit_id" translatable="false">ca-app-pub-4559958901091262/5140695822</string>
    <string name="friends_ad_unit_id" translatable="false">ca-app-pub-4559958901091262/6190865684</string>
    <string name="login_ad_unit_id" translatable="false">ca-app-pub-4559958901091262/8537827426</string>
    <string name="profile_ad_unit_id" translatable="false">ca-app-pub-4559958901091262/3814455107</string>
    <string name="reminder_notification_channel_id" translatable="false">reminderChannelID</string>
    <string name="deadline_notification_channel_id" translatable="false">deadlineChannelID</string>
    <string name="friends_notification_channel_id" translatable="false">friendsChannelID</string>
    <string name="task_transition_name" translatable="false">task_%1$d</string>
    <string name="task_detail_transition_name" translatable="false">task_detail</string>
    <string name="friend_transition_name" translatable="false">friend_%1$s</string>
    <string name="friend_detail_transition_name" translatable="false">friend_detail</string>
    <string name="privacy_policy"><a href="https://github.com/c0nnor263/PlannerApp/blob/main/privacy-policy.md">Privacy Policy</a></string>
    <string name="reminder_notification_channel_name">Reminders</string>
    <string name="deadline_notification_channel_name">Deadlines</string>
    <string name="friends_notification_channel_name">Friends</string>
    <string name="language">Language</string>
    <string-array name="languages">
        <item>English</item>
        <item>Русский</item>
        <item>Українська</item>
    </string-array>
    <string name="main">Main</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="dismiss">Dismiss</string>
    <string name="save">Save</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="sort">Sort by</string>
    <string name="priority">Priority</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="profile_photo">Profile photo</string>
    <string name="request_status">Request status</string>
    <string name="sign_out">Sign out</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_removing">Confirm removing</string>
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="check_your_internet">Check your internet connection and try again.\n\n</string>
    <string name="try_word">Try</string>
    <string name="time_word">Time</string>
    <string name="date_word">Date</string>
    <string name="downloading">Downloading…</string>
    <string name="exit">Exit</string>
    <string name="undo">UNDO</string>
    <string name="deny">Deny</string>
    <string name="upgrade">Upgrade</string>
    <string name="saved">Saved</string>
    <string name="warning">Warning!</string>
    <string name="max_total_check" translatable="false">%1$d+</string>
    <string name="count_of_tasks" translatable="false">%1$d/%2$d</string>
    <string name="count_of_completed" translatable="false">(%1$d)</string>
    <string name="enter_amount_title">Enter an amount of tasks</string>
    <string name="enter_amount_hint">Max - %1$d</string>
    <string name="add_task">Add task</string>
    <string name="task_deleted">Task deleted</string>
    <string name="incorrect_add_tasks">Incorrect, max amount - %1$d</string>
    <string name="reaching_max_tasks">You have reached your maximum of available tasks</string>
    <plurals name="tasks_been_added">
        <item quantity="one">%d task has been added</item>
        <item quantity="other">%d tasks has been added</item>
    </plurals>
    <string name="sort_by_title">Title</string>
    <string name="sort_by_date_created">Date created</string>
    <string name="sort_by_date_completed">Date completed</string>
    <string name="sort_by_overcompleted">Overcompleted</string>
    <string name="hide_tasks">Hide tasks</string>
    <string name="hide_completed">Hide completed</string>
    <string name="hide_overcompleted">Hide overcompleted</string>
    <string name="you_delete_completed">Do you want to delete completed tasks?</string>
    <string name="you_delete_overcompleted">Do you want to delete overcompleted tasks?</string>
    <string name="delete_only_completed">Delete only completed</string>
    <string name="action_delete_overcompleted">Delete overcompleted</string>
    <string name="action_delete_tasks">Delete tasks</string>
    <string name="completed_deleted">Completed tasks has been successfully deleted</string>
    <string name="overcompleted_deleted">Overcompleted tasks has been successfully deleted</string>
    <string name="cant_overcheck_task">You can overcheck this task only once per day</string>
    <string name="cant_check_task">You can\'t check this task. Title is empty</string>
    <string name="there_are_no_tasks_for_showing">There are no tasks for showing</string>
    <string name="saving_title_indicator">Saving title indicator</string>
    <string name="email_not_confirmed">Email isn\'t confirmed</string>
    <string name="error_importing_tasks">Error importing your tasks!</string>
    <string name="backup_tasks_message">It seems that you have backup of previous tasks and account data from %1$s.\n
        \n
        Would you like to restore that?\n
        (\"Deny\" - means overriding backup)
    </string>
    <string name="backup_tasks_message_no_prem">It seems that you have backup of previous tasks and account data from %1$s.\n
        \nRestoring backup is premium benefit.\nWould you like to subscribe?
    </string>
    <string name="error_checking_tasks">Error checking your backup tasks!</string>
    <string name="sync_status">Sync status</string>
    <string name="reminder_msg">Don\'t forget your task!</string>
    <string name="deadline_msg">Deadline is came for this task😔</string>
    <string name="deadline_reminder" tools:ignore="PluralsCandidate">%1$d hours left before completing the task(or not %1$d😏)</string>
    <string name="check_tasks">Check tasks</string>
    <string name="check_reminders">Check reminders</string>
    <string name="check_deadlines">Check deadlines</string>
    <string name="you_sure_quit">Are you sure you want to quit?</string>
    <string name="task_created">Created at: %1$s</string>
    <string name="task_completed">Completed at: %1$s</string>
    <string name="open_task">Open task</string>
    <string name="edit_task">Edit task</string>
    <string name="edit_title">Edit title</string>
    <string name="describe_task">Describe task</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="reminder">Reminder</string>
    <string name="deadline">Deadline</string>
    <string name="set_deadline">Set deadline</string>
    <string name="set_reminder">Set reminder</string>
    <string name="add_deadline">Add deadline</string>
    <string name="add_reminder">Add reminder</string>
    <string name="reminders_are_off">Reminders are turned off</string>
    <string name="remove_reminder">Remove reminder</string>
    <string name="remove_deadline">Remove deadline</string>
    <string name="reminder_task_removed">Reminder for this task has been removed</string>
    <string name="deadline_task_removed">Deadline for this task has been removed</string>
    <string name="you_quit_without_changes">Are you sure want to exit without changes?</string>
    <string name="reminder_less_than_minute">Reminder set for less than minute from now.</string>
    <string name="reminder_for_minutes">Reminder set for %1$s from now.</string>
    <string name="reminder_for_hour_minute">Reminder set for %1$s and %2$s from now.</string>
    <string name="reminder_for_day_hour_minute">Reminder set for %1$s, %2$s and %3$s from now.</string>
    <string name="deadline_less_than_minute">Deadline set for less than minute from now.</string>
    <string name="deadline_for_minutes">Deadline set for %1$s from now.</string>
    <string name="deadline_for_hour_minute">Deadline set for %1$s and %2$s from now.</string>
    <string name="deadline_for_day_hour_minute">Deadline set for %1$s, %2$s and %3$s from now.</string>
    <string-array name="priorities">
        <item>Leisurely</item>
        <item>Default</item>
        <item>Advisable</item>
        <item>Important</item>
    </string-array>
    <string name="repeat_mode">Repeat mode</string>
    <string-array name="repeat_modes">
        <item>Once</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="friends_list">Friends list</string>
    <string name="friends_tasks">%1$s\'s tasks</string>
    <string name="there_will_be_shown_friends_tasks">There will be shown %1$s\'s tasks</string>
    <string name="completed_tasks">Completed tasks</string>
    <string name="new_friend">New friend</string>
    <string name="enter_user_id">Enter user\'s id</string>
    <string name="enter_id_alert">Enter id!</string>
    <string name="friend_is_not_exist">The Friend you are looking for doesn\'t exist</string>
    <string name="you_add_friend_yourself">You can\'t add yourself to your friend list</string>
    <string name="error_adding_friend_is_list">Error adding the friend, is already in your list</string>
    <string name="notification_new_friend">%1$s wants to add you to friends</string>
    <string name="check_new_friends">Check new friends</string>
    <string name="you_add_friend">Do you want to add this user to friends?</string>
    <string name="successfully_adding_friend">Successfully added new friend</string>
    <string name="friend_request_deny">User request has been denied</string>
    <string name="delete_friend">Delete friend</string>
    <string name="friend_removed">User has been removed from friend\'s list</string>
    <string name="there_are_no_friends_for_showing">There are no friends for showing</string>
    <string name="new_nickname">New nickname</string>
    <string name="new_email">New email</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="check_new_email">Check your new email</string>
    <string name="reset_password">Reset password</string>
    <string name="reminder_state">Reminders: %1$s</string>
    <string name="vibration_state">In-app vibration: %1$s</string>
    <string name="private_state">Private mode: %1$s</string>
    <string name="notification_state">Notifications: %1$s</string>
    <string name="remove_all_reminders">All reminders</string>
    <string name="delete_all_tasks">All tasks</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="password_repeat">Repeat password</string>
    <string name="user_name">Username</string>
</resources>