<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/sort"
        android:id="@+id/action_sort_by_group"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_sort_by_title"
                android:title="@string/sort_by_name" />
            <item
                android:id="@+id/action_sort_by_date_created"
                android:title="@string/sort_by_date_created" />
            <item
                android:id="@+id/action_sort_by_date_completed"
                android:title="@string/sort_by_date_completed" />
        </menu>

    </item>

    <item android:id="@+id/action_hide_completed_tasks"
        android:checkable="true"
        android:title="@string/hide_completed"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete_completed_tasks"
        android:title="@string/delete_all_completed"
        app:showAsAction="never"/>

</menu>