<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:animateLayoutChanges="true"
        android:paddingBottom="16dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_baseline_close_24"
            app:popupTheme="@style/Theme.Material3.DayNight.NoActionBar"
            app:title="@string/settings" />


        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <LinearLayout
            android:id="@+id/ll_first_group"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:paddingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/m_btn_private"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:textSize="12sp"
                app:icon="@drawable/ic_baseline_person_24"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/private_state" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/m_btn_vibration"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:textSize="12sp"
                app:icon="@drawable/ic_baseline_vibration_24"
                tools:text="@string/vibration_state" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_second_group"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:paddingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_first_group">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/m_btn_reminder"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:textSize="12sp"
                app:icon="@drawable/ic_baseline_notifications_active_24"
                tools:text="@string/reminder_state" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/m_btn_notification"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:textSize="12sp"
                app:icon="@drawable/ic_baseline_notifications_24"
                tools:text="@string/notification_state" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_third_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:paddingHorizontal="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_second_group">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_language"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="2"
                android:hint="@string/language"
                app:startIconDrawable="@drawable/ic_baseline_language_24">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/actv_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:ellipsize="end"
                    android:focusable="false"
                    android:inputType="none"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/m_btn_save_language"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/primaryDarkColorAir"
                android:ellipsize="end"
                android:enabled="false"
                android:maxLines="1"
                android:text="@string/save"
                app:layout_constraintTop_toTopOf="@+id/til_language" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_third_group" />

        <LinearLayout
            android:id="@+id/ll_fours_group"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:paddingHorizontal="8dp"
            app:layout_constraintTop_toBottomOf="@+id/divider1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/m_btn_remove_reminders"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/secondaryDarkColorFire"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/remove_all_reminders"
                android:textColor="@android:color/white"
                app:icon="@drawable/ic_baseline_delete_sweep_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/m_btn_delete_tasks"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/secondaryDarkColorFire"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/delete_all_tasks"
                android:textColor="@android:color/white"
                app:icon="@drawable/ic_baseline_delete_forever_24" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>